solc_mutator_ossfuzz_seed_corpus/test_sol/test_4e76887a0921df15c6be1d92edcc29c5c40d513d41d043f135eafb5deee74b89_210dc2b58110cbb6f65473dd8c606dbed2d6155b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  event ev0(bool  ep0) anonymous;
  modifier m0() 
  {
    _;
  }
  function f0(uint208 i0,bool i1) external    returns(uint112 o0,bytes27 o1,address payable o2)
  {
  }
  error er0(int56 ep0);
  function f1() private    returns(bytes28 o0)
  {
  }
  modifier m1() 
  {
    _;
  }
}
struct St0 {
  string el0;
}
error er1(int200 ep0);
library L1 {
  function f2(bytes20 i0,St0 memory i1,function (function (bytes memory, int168[2] memory) internal   returns (bytes21), string memory) external   returns (uint88, bool) i2) external   
  {
  }
  modifier m2() 
  {
    _;
  }
  error er2(int8 ep0, bool ep1);
  modifier m3() 
  {
    _;
    _;
  }
  function f3() external   
  {
  }
  function f4(bool i0) private  m2()  returns(bool o0)
  {
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 2582: (su0.sol:410-481): Internal type cannot be used for external function type.
